--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <h1 class="display-4">Publigraf - Catálogo</h1>
+    <h1 class="display-4">Puppy food catalog</h1>
     <p class="lead">Lista de los productos que ofertamos</p>
     <hr class="my-4">
 </div>
