[production] Added jest tests. there are missing marbel tests in product service

--- a/src/app/products/product-detail-modal/product-detail-modal.component.html
+++ b/src/app/products/product-detail-modal/product-detail-modal.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-lg btn-outline-primary" (click)="open(content)">Detalle</button>
+<button id="atem-open-modal-btn" class="btn btn-lg btn-outline-primary" (click)="open(content)">Detalle</button>
 
 <ng-template #content let-modal>
     <div class="modal-header">
